# MLE

./: .gitignore  README.md  env.yml  nonstandardcode.py  test.py
TEST_PACKAGE/: README.md  pyproject.toml
TEST_PACKAGE/docs/: conf.py  index.rst  modules.rst
TEST_PACKAGE/docs/_build/doctrees/: index.doctree  test_package.doctree
TEST_PACKAGE/docs/_build/html/: index.html  modules.html  py-modindex.html  searchindex.js
TEST_PACKAGE/docs/_build/html/_sources/: modules.rst.txt
TEST_PACKAGE/docs/_build/html/_static/: documentation_options.js
TEST_PACKAGE/src/test_package/: ingest_data.py  main.py  score.py  train.py
TEST_PACKAGE/src/test_package/mlruns/0/: meta.yaml
TEST_PACKAGE/test_package-0.2/: Dockerfile  PKG-INFO
TEST_PACKAGE/test_package-0.2/deploy/: mle-dev.yml
TEST_PACKAGE/test_package-0.2/docs/_build/doctrees/: environment.pickle
TEST_PACKAGE/test_package-0.2/docs/_build/html/: .buildinfo  genindex.html  test_package.html
TEST_PACKAGE/test_package-0.2/src/test_package/: ingest_data.py  score.py  train.py
TEST_PACKAGE/test_package-0.2/src/test_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
TEST_PACKAGE/test_package-0.2/test_package-0.2/: PKG-INFO  README.md  setup.py
TEST_PACKAGE/test_package-0.2/test_package-0.2/docs/: conf.py
TEST_PACKAGE/test_package-0.2/tests/functional_tests/: test_package.py
TEST_PACKAGE/test_package-0.2/tests/unit_tests/: test_train_test_split.py
TEST_PACKAGE/tests/functional_tests/: test_package.py
TEST_PACKAGE/tests/unit_tests/: test_train_test_split.py
(+39 files in other folders)
